Backend Integration with LinkedIn Webhook

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,9 @@ VITE_SUPABASE_ANON_KEY=your-anon-key
 
 # OpenAI Configuration (for AI features)
 VITE_OPENAI_API_KEY=your-openai-api-key
+
+# Backend API Configuration
+VITE_API_URL=http://localhost:3001/api
+
+# Google OAuth Configuration (for Google Sheets integration)
+VITE_GOOGLE_CLIENT_ID=your-google-client-id
